// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_having.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 55,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 68,
                "typeName": {
                  "location": 70,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 75,
                "typeName": {
                  "location": 77,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 82,
                "typeName": {
                  "location": 84,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "bpchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 8,
                        },
                        "location": 89,
                      },
                    },
                  ],
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "d",
                "is_local": true,
                "location": 93,
                "typeName": {
                  "location": 95,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "bpchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": -1,
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "XXXX",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "A",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "AAAA",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "b",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "AAAA",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "c",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "BBBB",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "D",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "BBBB",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "e",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 5,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "bbbb",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "F",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 6,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "cccc",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "g",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 7,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "cccc",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "h",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 8,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "CCCC",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "I",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_having",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 9,
                          },
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "CCCC",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "j",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 19,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "b",
                    },
                  },
                ],
                "location": 41,
              },
            },
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "c",
                    },
                  },
                ],
                "location": 44,
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "FuncCall": {
                  "agg_star": true,
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "count",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
              "location": 62,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 64,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 75,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 78,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 12,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 12,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 77,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "b",
                    },
                  },
                ],
                "location": 99,
              },
            },
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "c",
                    },
                  },
                ],
                "location": 102,
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "b",
                      },
                    },
                  ],
                  "location": 111,
                },
              },
              "location": 113,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 3,
                  },
                  "location": 115,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 126,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 129,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 67,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 67,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 70,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 70,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 33,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 61,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "lower",
                    },
                  },
                ],
                "location": 55,
              },
            },
          ],
          "havingClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 71,
                      },
                    },
                    "location": 80,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 82,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                              ],
                              "location": 91,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "min",
                            },
                          },
                        ],
                        "location": 87,
                      },
                    },
                    "location": 94,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                              ],
                              "location": 100,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "max",
                            },
                          },
                        ],
                        "location": 96,
                      },
                    },
                  },
                },
              ],
              "boolop": "OR_EXPR",
              "location": 84,
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                          ],
                          "location": 119,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "lower",
                        },
                      },
                    ],
                    "location": 113,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                          ],
                          "location": 15,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "lower",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                          ],
                          "location": 25,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "c",
                    },
                  },
                ],
                "location": 46,
              },
            },
          ],
          "havingClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 66,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                              ],
                              "location": 75,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "min",
                            },
                          },
                        ],
                        "location": 71,
                      },
                    },
                    "location": 78,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "a",
                                  },
                                },
                              ],
                              "location": 84,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "max",
                            },
                          },
                        ],
                        "location": 80,
                      },
                    },
                  },
                },
              ],
              "boolop": "OR_EXPR",
              "location": 68,
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 97,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 12,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 16,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 12,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 164,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 187,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "min",
                      },
                    },
                  ],
                  "location": 183,
                },
              },
              "location": 190,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 196,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "max",
                      },
                    },
                  ],
                  "location": 192,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 144,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 148,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "min",
                        },
                      },
                    ],
                    "location": 144,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 152,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 156,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 152,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 28,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 51,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "min",
                      },
                    },
                  ],
                  "location": 47,
                },
              },
              "location": 54,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 60,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "max",
                      },
                    },
                  ],
                  "location": 56,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 12,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "min",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 16,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 16,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 55,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 78,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "min",
                      },
                    },
                  ],
                  "location": 74,
                },
              },
              "location": 81,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 87,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "max",
                      },
                    },
                  ],
                  "location": 83,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 48,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 48,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "a",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 45,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "one",
                "val": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 81,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 100,
                },
              },
              "location": 102,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 104,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 67,
                "name": "one",
                "val": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 67,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 41,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 45,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "one",
                "val": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 79,
                "relname": "test_having",
                "relpersistence": "p",
              },
            },
          ],
          "havingClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 112,
                },
              },
              "location": 114,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 116,
                },
              },
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 65,
                "name": "one",
                "val": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 65,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 97,
                    },
                  },
                  "location": 98,
                  "name": [
                    {
                      "String": {
                        "sval": "/",
                      },
                    },
                  ],
                  "rexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 99,
                    },
                  },
                },
              },
              "location": 101,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 103,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_having.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_having",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
